icons correct,a nd circle icons correct size, layered icons are not centered

--- a/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
@@ -46,6 +46,11 @@
     /* z-index: 1; */
 }
 
+.dynamic-assignee-icon {
+    position: relative;
+    margin-left: 5px !important;
+}
+
 
 .space {
     margin-right: 5px;
